# polaris-telemetry-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  deploy_dev.sh  run_integration_tests.sh
dhos_telemetry_api/: __main__.py  app.py
dhos_telemetry_api/blueprint_api/: __init__.py  controller.py
dhos_telemetry_api/blueprint_development/: __init__.py  controller.py
dhos_telemetry_api/helpers/: cli.py
dhos_telemetry_api/models/: api_spec.py  blood_glucose_meter.py  desktop.py  mobile.py
dhos_telemetry_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Makefile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: dhos_telemetry_client.py
integration-tests/features/: blood_glucose_meter.feature  clinician_installation.feature  patient_installation.feature
integration-tests/helpers/: jwt_helper.py  request_helper.py
integration-tests/steps/: common_steps.py
migrations/versions/: 0374bb6b95f6_revert.py  22b454c57440_meter.py  660d0bbffc26_.py  e0f885133da6_meter.py
tests/: conftest.py  test_controller.py  test_desktop_api.py  test_meter_api.py  test_mobile_api.py  test_openapi.py
